objects/Product2.object
<CustomObject>
    <fields>
        <fullName>CN_Apex_Update_DateTime__c</fullName>
        <description>Use this field to avoid validation rule when update record by apex class.</description>
        <label>Apex Update DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Base_Unit_of_Measure__c</fullName>
        <label>Base Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Brand_Name__c</fullName>
        <formula>Text(CN_Brand__c)</formula>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Detailed_Description__c</fullName>
        <inlineHelpText>请把产品描述包括图片填写到详细描述中，其他内容，如产品配方，证书等需要通过文档上传 / Please fill in the product description, including pictures, into the detailed description. Other content, such as product formulas, certificates, etc., need to be uploaded through the document.</inlineHelpText>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CN_Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Package_Description__c</fullName>
        <label>Package Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Name_EN__c</fullName>
        <label>Product Name(EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Qty_per_Carton_PDF__c</fullName>
        <description>Mass upload this field and display at Quote PDF</description>
        <label>Qty per Carton PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Qty_per_Carton__c</fullName>
        <label>Qty per Carton</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SKU Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_SKU_Description_CN__c</fullName>
        <label>SKU Description CN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Description_EN__c</fullName>
        <label>SKU Description EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Unit__c</fullName>
        <label>Sales Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Type__c</fullName>
        <label>Sample Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repack</fullName>
                    <label>Test Sample</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sample_Unit_List_Price__c</fullName>
        <label>Sample Unit List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Selling_Unit__c</fullName>
        <label>Selling Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Selling_Unit_of_Measure__c</fullName>
        <label>Selling Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Shelf_Life__c</fullName>
        <label>Shelf Life</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Standard_Sample_Unit__c</fullName>
        <label>Standard Sample Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Storage_Condition__c</fullName>
        <label>Storage Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Tax_rate__c</fullName>
        <label>Tax rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Weight_Unit__c</fullName>
        <label>Weight Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Repack_Sample__c</fullName>
        <formula>ISPICKVAL(CN_Sample_Type__c  , &quot;Repack&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Test Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shelf_Life_Unit__c</fullName>
        <label>Shelf Life Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>CN_SKU_Description_CN__c</columns>
        <columns>CN_SKU_Description_EN__c</columns>
        <columns>CN_Brand__c</columns>
        <columns>CN_Base_Unit_of_Measure__c</columns>
        <columns>CN_Shelf_Life__c</columns>
        <columns>CN_Standard_Sample_Unit__c</columns>
        <columns>CN_Sample_Unit_List_Price__c</columns>
        <columns>CN_Sample_Type__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.CN_Product</value>
        </filters>
        <label>All Active Products</label>
    </listViews>
    <listViews>
        <fullName>All_InActive_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>CN_SKU_Description_CN__c</columns>
        <columns>CN_SKU_Description_EN__c</columns>
        <columns>CN_Brand__c</columns>
        <columns>CN_Base_Unit_of_Measure__c</columns>
        <columns>CN_Shelf_Life__c</columns>
        <columns>CN_Standard_Sample_Unit__c</columns>
        <columns>CN_Sample_Unit_List_Price__c</columns>
        <columns>CN_Sample_Type__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All InActive Products</label>
    </listViews>
    <listViews>
        <fullName>All_Repack_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>CN_SKU_Description_CN__c</columns>
        <columns>CN_SKU_Description_EN__c</columns>
        <columns>CN_Brand__c</columns>
        <columns>CN_Base_Unit_of_Measure__c</columns>
        <columns>CN_Shelf_Life__c</columns>
        <columns>CN_Standard_Sample_Unit__c</columns>
        <columns>CN_Sample_Unit_List_Price__c</columns>
        <columns>CN_Sample_Type__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Sample_Type__c</field>
            <operation>equals</operation>
            <value>Repack</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.CN_Product</value>
        </filters>
        <label>All Test Sample Products</label>
    </listViews>
    <recordTypes>
        <fullName>CN_Product</fullName>
        <active>true</active>
        <label>CN Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CN_Poduct_Prevent_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Product&apos;,
  NOT(OR(
   ISCHANGED(CN_Apex_Update_DateTime__c),
   AND( ISNEW() , NOT( ISNULL(CN_Apex_Update_DateTime__c)))
  )),
  OR(ISCHANGED( Name ),ISCHANGED( IsActive ))
)</errorConditionFormula>
        <errorMessage>You have no access to update these info of the product:
Product Name,
Active.</errorMessage>
    </validationRules>
</CustomObject>